JS + CSS added, bg loaded from unsplash API

--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     <title>Weather App</title>
   </head>
   <body>
-    <div class="card-container">
+    <div class="card">
       <div class="search">
-        <input type="text" id="" class="search-bar" />
+        <input
+          type="text"
+          id=""
+          class="search-bar"
+          autocomplete="off"
+          placeholder="Search"
+        />
         <button>
           <svg
             stroke="currentColor"
@@ -30,7 +36,7 @@
       </div>
       <div class="weather">
         <h2 class="city">Weather in Denver</h2>
-        <div class="temp">51°C</div>
+        <h class="temp">51°C</h>
         <img src="" alt="" class="icon" />
         <div class="description">Cloudy</div>
         <div class="humidity">Humidity 60%</div>
