--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
           </svg>
         </button>
       </div>
-      <div class="weather">
+      <div class="weather loading">
         <h2 class="city">Weather in Denver</h2>
-        <h class="temp">51°C</h>
+        <h1 class="temp">51°C</h1>
         <img src="" alt="" class="icon" />
         <div class="description">Cloudy</div>
         <div class="humidity">Humidity 60%</div>
